# main

./: .env.example  .gitignore  Makefile  README.md  alembic.ini  config.py  crypto.py  docker-compose.yml  exceptions.py  logging.py  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
deploy/: Dockerfile
deploy/nginx/: nginx.conf
deploy/nginx/conf.d/: fastsub.conf
deploy/pgbouncer/: Dockerfile  entrypoint.sh  pgbouncer.ini.template
deploy/postgres/: init.sql
deploy/scripts/: backup.sh  deploy.sh  restore.sh
docs/: ARCHITECTURE.md
migrations/: env.py
migrations/versions/: 0001_initial_schema.py  0002_publisher_bots.py  0003_resource_issues_publisher_bot.py  0004_global_user_resource_constraint.py  0005_end_users.py  0006_webhooks_per_bot.py  0007_publisher_rating.py  0008_enduser_audience_flags.py  0009_publisher_bot_moderation.py  0010_subgram_features.py
src/: __init__.py
src/api/: app.py  dependencies.py  rate_limit.py
src/bots/admin/: __main__.py  middlewares.py
src/bots/advertiser/: __main__.py  texts.py
src/bots/checker/: __main__.py  (+1 more)
src/core/: config.py  redis.py
src/domain/: exceptions.py
src/shared/: idgen.py  money.py
src/workers/: broker.py  issue_lifecycle.py  notifications.py  retention.py  webhook_delivery.py
tests/: conftest.py
tests/integration/: conftest.py  test_concurrency_db.py  test_roundtrip_db.py  test_smoke.py
tests/unit/: test_commission.py  test_config.py  test_docs_page.py  test_financial.py  test_hold.py  test_idgen.py  test_issue_status_item.py  test_money.py  test_openapi_schema.py  test_split_payout.py  test_state_machine.py  test_stats.py  test_webhook_events_sync.py  test_withdrawal.py
(+131 files in other folders)
