[project]
name = "fastsub"
version = "0.1.0"
description = "FastSub — Telegram traffic monetization platform"
requires-python = ">=3.12"
dependencies = [
    # Telegram
    "aiogram==3.13.1",
    # API
    "fastapi==0.115.0",
    "uvicorn[standard]==0.32.0",
    # Database
    "sqlalchemy[asyncio]==2.0.35",
    "asyncpg==0.29.0",
    "alembic==1.13.3",
    # Cache & queues
    "redis[hiredis]==5.1.1",
    "taskiq==0.11.7",
    "taskiq-redis==1.0.2",
    # Validation & config
    "pydantic==2.9.2",
    "pydantic-settings==2.5.2",
    # HTTP client (CryptoBot, exchange rates)
    "httpx==0.27.2",
    # Logging & observability
    "structlog==24.4.0",
    "prometheus-client==0.21.0",
    # Utils
    "python-dateutil==2.9.0",
    "orjson==3.10.7",
    "tenacity==9.0.0",
    # Crypto (for encrypting publisher's TG bot tokens in DB)
    "cryptography==43.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "pytest-cov==5.0.0",
    "ruff==0.6.9",
    "mypy==1.11.2",
    "types-python-dateutil",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
